route/stop lists -> linked lists